// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`countdown :autoStart 1`] = `
<main>
  <t-count-down>
    <wx-view
      class="t-class t-count-down t-count-down--small t-count-down--default"
      style=""
    >
      00 : 00 : 01
    </wx-view>
  </t-count-down>
</main>
`;

exports[`countdown :base 1`] = `
<main>
  <t-count-down>
    <wx-view
      class="t-class t-count-down t-count-down--small t-count-down--default"
      style=""
    >
      00 : 00 : 01
    </wx-view>
  </t-count-down>
</main>
`;

exports[`countdown :base 2`] = `
<main>
  <t-count-down>
    <wx-view
      class="t-class t-count-down t-count-down--small t-count-down--default"
      style=""
    >
      00 : 00 : 00
    </wx-view>
  </t-count-down>
</main>
`;

exports[`countdown :millisecond 1`] = `
<main>
  <t-count-down
    id="cd"
  >
    <wx-view
      class="t-class t-count-down t-count-down--small t-count-down--default"
      style=""
    >
      00 : 00 : 00
    </wx-view>
  </t-count-down>
</main>
`;
